objects/TSS_StickIt_MR1__StickIt_Queue__c.object
<CustomObject>
    <fields>
        <fullName>TSS_StickIt_MR1__Label_Name__c</fullName>
        <label>Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Label_XML__c</fullName>
        <label>Label XML</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Printer__c</fullName>
        <label>Printer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Received_Date_Time__c</fullName>
        <description>Date/Time the label job was successfully received by the StickIt Automation Station</description>
        <label>Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Sent_to_Printer_Date_Time__c</fullName>
        <description>Date/Time the label was sent to the printer by the StickIt Automation Station</description>
        <label>Sent to Printer Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>StickIt Queue</label>
    <listViews>
        <fullName>TSS_StickIt_MR1__All</fullName>
        <columns>NAME</columns>
        <columns>TSS_StickIt_MR1__Label_Name__c</columns>
        <columns>TSS_StickIt_MR1__Printer__c</columns>
        <columns>TSS_StickIt_MR1__Received__c</columns>
        <columns>TSS_StickIt_MR1__Received_Date_Time__c</columns>
        <columns>TSS_StickIt_MR1__Sent_to_Printer_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ{000}</displayFormat>
        <label>StickIt Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stickit Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>